// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSecret /> should display the secret if provided 1`] = `
<div>
  <ErrorAlert
    error=""
  />
  <div
    className="alert alert-warning"
  >
    <LoadingSpinner
      loading={false}
      message="Loading..."
    />
    <p>
      <strong>
        Here is your new secret. Make sure to copy it now. You will not be able to see it again.
      </strong>
      <br />
      <code>
        a-test-secret
      </code>
    </p>
  </div>
</div>
`;

exports[`<AppSecret /> should not display the secret if not provided 1`] = `
<div>
  <ErrorAlert
    error=""
  />
  <div
    className="alert alert-warning"
  >
    <LoadingSpinner
      loading={false}
      message="Loading..."
    />
    <div>
      <p>
        You can regenerate your app secret below. This process will clear your old secret and require updates to your apps or scripts.
      </p>
      <button
        className="btn orange"
        onClick={[Function]}
        type="button"
      >
        Regenerate App secret
      </button>
    </div>
  </div>
</div>
`;
